Fix stupid CSS mixtake--page wasn't stretching vertically at arbitrary heights

--- a/assets/splash.css
+++ b/assets/splash.css
@@ -1,9 +1,12 @@
 body, html {
+    height: 100%;
+    overflow: hidden;
     margin: 0;
     padding: 0;
 }
 
 body {
+    min-height: 100%;
     background-image: url('guitarman.jpg');
     background-position: 10% 40%;
 }
